# git-todo

./: Cargo.toml  LICENSE  README.md
packaging/arch/: PKGBUILD
packaging/homebrew/: git-todo.rb
src/: cli.rs  editor.rs  main.rs  repo.rs  store.rs  todo.rs
src/commands/: comment.rs  complete.rs  done.rs  label.rs  list.rs  mod.rs  new.rs  show.rs
