[package]
name = "git-todo"
version = "0.1.0"
edition = "2024"
description = "Track todos as commits on a `todo` branch"
license = "MIT"
repository = "https://github.com/stoggi/git-todo"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
clap_complete = "4"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
sha1 = "0.10"
hex = "0.4"
tempfile = "3.27.0"
